<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/dahsboard_bt_transaction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_details_button"
            android:text="@string/dahsboard_bt_transactions"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dahsboard_bt_accounts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_details_button"
            android:text="@string/dahsboard_bt_accounts"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dahsboard_bt_reports"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_details_button"
            android:text="@string/dahsboard_bt_reports"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>